Fix Supabase redirection issue